# CLRL-Source-Code

./: Build.bat  CMakeLists.txt  LICENSE  demo.clrl  readme.md
doc/: zh-cn.md
include/clrl/: clrl_runtime.h
src/: version.rc  version_dll.rc
src/cli/: clrlc.c
src/runtime/: clrl_runtime.c
